@@ -15,6 +15,7 @@ Overview of changes in lightdm 1.1.1
     * Set LOGNAME environment variable
     * Don't set USERNAME environment variable - this is not specified in POSIX,
       please report if this causes any major problems.
+    * Drop privileges when reading ~/.dmrc
 
 Overview of changes in lightdm 1.1.0
 
